# docs-common

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: docs.yml
.github/workflows/: deploy-docs.yml  docs.yml
demo/: mkdocs.yml  serve-demo.ps1
demo/docs/: api.md  commands-and-permissions.md  configuration.md  contribution.md  customization.md  download.md  how-it-works.md  index.md  installation.md  troubleshooting.md  worldguard-integration.md
src/stellionix_mkdocs/: __init__.py  plugin.py
src/stellionix_mkdocs/assets/stylesheets/: extra.css
templates/: docs.workflow.yml  mkdocs.plugin.yml
